# fastapi-admin-v2

./: .env.example  README.md  api.md  init_db.py  main.py  pyproject.toml  pytest.ini  run_tests.py  start.py
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  lifespan.py  metrics.py  permissions.py  request_context.py  security.py
app/dao/: __init__.py  base.py  log.py  permission.py  role.py  role_permission.py  system_config.py  user.py  user_role.py
app/middlewares/: __init__.py  force_https.py  rate_limit.py  request_context.py  security_headers.py
app/models/: __init__.py  base.py  log.py  permission.py  role.py  role_permission.py  system_config.py  user.py  user_role.py
app/schemas/: __init__.py  auth.py  common.py  log.py  permission.py  response.py  role.py  system_config.py  user.py
app/services/: __init__.py  auth.py  base.py  log.py  permission.py  role.py  system_config.py  user.py
app/utils/: __init__.py  audit.py  builtin_rbac.py  cache.py  cache_manager.py  generate_key.py  (+2 more)
docs/: 设计方案.md
tests/: TEST_README.md  __init__.py  conftest.py  test_auth.py  test_auth_refresh_logout.py  test_edge_cases.py  test_logs.py  test_permissions.py  test_permissions_disable.py  test_regressions.py  test_roles.py  test_roles_batch.py  test_roles_disable.py  test_roles_permissions.py  test_roles_users_list.py  test_system.py  test_system_config_api.py  test_users.py  test_users_batch.py  test_users_change_password.py  test_users_me.py  test_users_roles.py
(+7 files in other folders)
